// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepStatus /> should render 1`] = `
<div>
  <label
    class="sc-jtiXyc fDkWSo"
    data-testid="question-label"
  >
    <span
      class="sc-bBjRSN fzTfxR"
    >
      Le licenciement est-il dû à une faute grave (ou lourde) ?
      <span
        class="sc-bBjRSN jPMLlF"
      >
         (obligatoire)
      </span>
    </span>
  </label>
  <div
    class="sc-gstuGz VcGrG"
  >
    <div
      class="sc-hkeOVe ghkjZk"
    >
      <input
        class="sc-gVFcvn gCGLUB"
        data-testid="seriousMisconduct-oui"
        id="seriousMisconduct-oui"
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      <label
        class="sc-cbeScs iWkDcx"
        for="seriousMisconduct-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="sc-hkeOVe ghkjZk"
    >
      <input
        class="sc-gVFcvn gCGLUB"
        data-testid="seriousMisconduct-non"
        id="seriousMisconduct-non"
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      <label
        class="sc-cbeScs iWkDcx"
        for="seriousMisconduct-non"
      >
        Non
      </label>
    </div>
  </div>
</div>
`;

exports[`<StepStatus /> should render coefficient 1`] = `
<div>
  <label
    class="sc-jtiXyc fDkWSo"
    data-testid="question-label"
  >
    <span
      class="sc-bBjRSN fzTfxR"
    >
      Le licenciement est-il dû à une faute grave (ou lourde) ?
      <span
        class="sc-bBjRSN jPMLlF"
      >
         (obligatoire)
      </span>
    </span>
  </label>
  <div
    class="sc-gstuGz VcGrG"
  >
    <div
      class="sc-hkeOVe ghkjZk"
    >
      <input
        class="sc-gVFcvn gCGLUB"
        data-testid="seriousMisconduct-oui"
        id="seriousMisconduct-oui"
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      <label
        class="sc-cbeScs iWkDcx"
        for="seriousMisconduct-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="sc-hkeOVe ghkjZk"
    >
      <input
        checked=""
        class="sc-gVFcvn gCGLUB"
        data-testid="seriousMisconduct-non"
        id="seriousMisconduct-non"
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      <label
        class="sc-cbeScs iWkDcx"
        for="seriousMisconduct-non"
      >
        Non
      </label>
    </div>
  </div>
  <label
    class="sc-jtiXyc fDkWSo"
    data-testid="question-label"
  >
    <span
      class="sc-bBjRSN fzTfxR"
    >
      Le salarié concerné est-il reconnu en tant que travailleur handicapé ?
      <span
        class="sc-bBjRSN jPMLlF"
      >
         (obligatoire)
      </span>
    </span>
  </label>
  <div
    class="sc-gstuGz VcGrG"
  >
    <div
      class="sc-hkeOVe ghkjZk"
    >
      <input
        checked=""
        class="sc-gVFcvn gCGLUB"
        data-testid="disabledWorker-oui"
        id="disabledWorker-oui"
        name="disabledWorker"
        type="radio"
        value="true"
      />
      <label
        class="sc-cbeScs iWkDcx"
        for="disabledWorker-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="sc-hkeOVe ghkjZk"
    >
      <input
        class="sc-gVFcvn gCGLUB"
        data-testid="disabledWorker-non"
        id="disabledWorker-non"
        name="disabledWorker"
        type="radio"
        value="false"
      />
      <label
        class="sc-cbeScs iWkDcx"
        for="disabledWorker-non"
      >
        Non
      </label>
    </div>
  </div>
  <div
    class="sc-cKRKFl hZmRui"
  >
    <label
      class="sc-jtiXyc fDkWSo"
      data-testid="question-label"
      for="input-cdt.ancienneté"
    >
      <span
        class="sc-bBjRSN fzTfxR"
      >
        Quelle est l'ancienneté du salarié ?
        <span
          class="sc-bBjRSN jPMLlF"
        >
           (obligatoire)
        </span>
      </span>
      <button
        aria-label="Plus d'informations"
        class="sc-hiKfDv eWfpdP sc-jgPyTC bxvCsc"
        title="Plus d'informations"
        type="button"
      >
        <svg
          aria-label="?"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </button>
    </label>
    <label
      class="sc-ellfGf fJHwKj"
    >
      Choisissez parmi les catégories d'ancienneté telles que définies par le Code du travail
    </label>
    <div
      class="sc-fWWYYk ggbdoe sc-kizEQm dFHqye"
    >
      <select
        class="sc-gzcbmu koAMcy"
        data-testid="cdt.ancienneté"
        id="input-cdt.ancienneté"
        name="cdt.ancienneté"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          data-testid="15| Moins de 6 mois"
          value="15| Moins de 6 mois"
        >
          Moins de 6 mois
        </option>
        <option
          data-testid="33| 6 mois à moins de 2 ans"
          value="33| 6 mois à moins de 2 ans"
        >
          6 mois à moins de 2 ans
        </option>
        <option
          data-testid="43| Plus de 2 ans"
          value="43| Plus de 2 ans"
        >
          Plus de 2 ans
        </option>
      </select>
      <div
        aria-hidden="true"
        class="sc-fIxmyt gQnvnN"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#arrow-down_svg__a)"
          >
            <path
              d="m8.425 11.573 7.11-6.072a.709.709 0 0 0 .26-.537.709.709 0 0 0-.26-.537.973.973 0 0 0-.629-.223.973.973 0 0 0-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 0 0-.63-.223.973.973 0 0 0-.628.223.708.708 0 0 0-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 0 0 .29.165 1.021 1.021 0 0 0 .68 0 .91.91 0 0 0 .29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__a"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepStatus /> should render seriousMisconduct 1`] = `
<div>
  <label
    class="sc-jtiXyc fDkWSo"
    data-testid="question-label"
  >
    <span
      class="sc-bBjRSN fzTfxR"
    >
      Le licenciement est-il dû à une faute grave (ou lourde) ?
      <span
        class="sc-bBjRSN jPMLlF"
      >
         (obligatoire)
      </span>
    </span>
  </label>
  <div
    class="sc-gstuGz VcGrG"
  >
    <div
      class="sc-hkeOVe ghkjZk"
    >
      <input
        class="sc-gVFcvn gCGLUB"
        data-testid="seriousMisconduct-oui"
        id="seriousMisconduct-oui"
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      <label
        class="sc-cbeScs iWkDcx"
        for="seriousMisconduct-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="sc-hkeOVe ghkjZk"
    >
      <input
        checked=""
        class="sc-gVFcvn gCGLUB"
        data-testid="seriousMisconduct-non"
        id="seriousMisconduct-non"
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      <label
        class="sc-cbeScs iWkDcx"
        for="seriousMisconduct-non"
      >
        Non
      </label>
    </div>
  </div>
  <label
    class="sc-jtiXyc fDkWSo"
    data-testid="question-label"
  >
    <span
      class="sc-bBjRSN fzTfxR"
    >
      Le salarié concerné est-il reconnu en tant que travailleur handicapé ?
      <span
        class="sc-bBjRSN jPMLlF"
      >
         (obligatoire)
      </span>
    </span>
  </label>
  <div
    class="sc-gstuGz VcGrG"
  >
    <div
      class="sc-hkeOVe ghkjZk"
    >
      <input
        class="sc-gVFcvn gCGLUB"
        data-testid="disabledWorker-oui"
        id="disabledWorker-oui"
        name="disabledWorker"
        type="radio"
        value="true"
      />
      <label
        class="sc-cbeScs iWkDcx"
        for="disabledWorker-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="sc-hkeOVe ghkjZk"
    >
      <input
        class="sc-gVFcvn gCGLUB"
        data-testid="disabledWorker-non"
        id="disabledWorker-non"
        name="disabledWorker"
        type="radio"
        value="false"
      />
      <label
        class="sc-cbeScs iWkDcx"
        for="disabledWorker-non"
      >
        Non
      </label>
    </div>
  </div>
</div>
`;
